# LCARS-WebUI

./: .gitignore  AGENTS.md  AUDIT_REMEDIATION_PLAN.md  BETA1_PLAN.md  CONTEXT.md  CONTRIBUTING.md  CURRENT_STATE.md  GITHUB_PUBLICATION_CHECKLIST.md  Implementation Plan.md  LCARS UI Specification.md  LCARS_PORTING_SPEC.md  LCARS_VISUAL_FIDELITY_PLAN.md  LCARS_VISUAL_OVERHAUL_PLAN.md  Phase 1 Implementation Plan.md  Phase 11 Implementation Plan.md  Phase 13 Implementation Plan.md  Phase 13 Patch Plan.md  Phase 15 Implementation Plan.md  Phase 2 Implementation Plan.md  Phase 5 Implementation Plan.md  Phase 7 Implementation Plan.md  Phase 8 Implementation Plan.md  Phases 1-10 Pre Alpha Implementation Plan.md  README.md  RELEASE_NOTES.md  SECURITY.md  SNAPSHOT_PROCESS.md  STRICT_LCARS_VISUAL_SPEC.md  SUPPORT.md  codex.resume  opencode.json  resume_claude.note  test_hud.py
lcars-ui/: .coverage  .gitignore  Makefile  README.md  dashboard_demo.py  pyproject.toml
lcars-ui/docs/: OVERVIEW_PARITY_ARCHITECTURE.md  PHASE14_PERIODIC_TABLE_MIGRATION_NOTE.md  PHASE14_SEISMOGRAPHIC_MIGRATION_NOTE.md  PHASE14_TARGET_BANK_VISUAL_FLOW.md  PHASE14_TRANSITION_BOUNDARIES.md  PHASE17_CLOSEOUT.md  PHASE18_CLOSEOUT.md  RELEASE_1.0_AUDIT.md  RELEASE_READINESS_2026-03-23.md  RENDERER_BAKEOFF_CONTENDER_CAPABILITY_TABLE.md  RENDERER_BAKEOFF_CONTRACT.md  RENDERER_BAKEOFF_FIXED_PROBE_ANSWER_SHEET.md  RENDERER_BAKEOFF_PHASE4_ARTIFACT_INDEX.json  RENDERER_BAKEOFF_PHASE4_CONTENDER_PROBE_SUMMARIES.json  RENDERER_BAKEOFF_PHASE4_ROLE_ASSIGNMENT.json  RENDERER_BAKEOFF_PHASE4_ROLE_ASSIGNMENT.md  dsl.md  (+17 more)
(+323 files in other folders)
